--- a/main.css
+++ b/main.css
@@ -76,9 +76,6 @@ p{
 section{
   padding: 20px;
   max-width: 800px;
-  background-color:transparent; /* semi-transparent dark background */
-  border-radius: 10px; /* rounded corners */
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   
 }
 
@@ -258,7 +255,6 @@ nav ul li a{
 .project-card {
   max-width: 1100px;
   margin: auto;
-  background-color: #111827;
   border-radius: 12px;
   overflow: hidden;
   padding: 20px;
@@ -273,8 +269,10 @@ nav ul li a{
 }
 .project-image-container{
   flex: 0 0 auto;
-  width: 300px; /* fixed width for the image container */
+  width: 300px; 
   max-width: 100%;
+  border-radius: 10px;
+  overflow: hidden;
 }
 
 
@@ -283,18 +281,36 @@ nav ul li a{
   width: 100%;
   height: auto;
   border-radius: 10px;
-  flex-shrink: 0;
   overflow: hidden;
+  transform: scale(1.2);
+  transition: transform 0.3s ease;
+}
+.project-image:hover {
+  transform: scale(1); /* zoom effect on hover */
+  
 }
 
 .project-info {
   flex: 1;
   min-width: 260px;
+  cursor: pointer;
+  
+}
+
+.project-info:hover .project-title {
+  background-color: #16192f; /* slightly darker on hover */
+  cursor: pointer;
+  transform: scale(1.07); /* slight zoom effect */
+  transition: transform 0.2s ease;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  color: white; /* darker text on hover */
+
 }
 
 .project-title {
   font-size: 1.5rem;
   margin-bottom: 12px;
+  color: #ffffff;
   font-weight: bold;
 }
 
@@ -344,5 +360,63 @@ nav ul li a{
 
   .project-image {
     width: 100%;
+  }
+}
+
+
+
+.about-text {
+  flex: 2;
+  min-width: 280px;
+}
+
+.about-text h2 {
+  font-size: 1.8rem;
+  margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.highlight {
+  color: #facc15; /* Tailwind's yellow-400 */
+  font-weight: 500;
+}
+
+.about-image {
+  flex: 1;
+  min-width: 220px;
+  display: flex;
+  justify-content: center;
+}
+
+.about-image img {
+  max-width: 250px;
+  width: 100%;
+  height: auto;
+  border-radius: 12px;
+  border: 3px solid #1f2937;
+  transform: rotate(2deg);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+}
+
+/* Responsive stack layout for small screens */
+@media (max-width: 768px) {
+  .about-section {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .about-text {
+    padding: 0 10px;
+  }
+
+  .about-text h2 {
+    justify-content: center;
+  }
+
+  .about-image img {
+    transform: rotate(0deg);
   }
 }
