--- a/styles/main.css
+++ b/styles/main.css
@@ -47,14 +47,24 @@
   font-weight: 700;
   font-style: italic;
 }
+/*  variables */
 
+:root {
+  --primary-color: #2a4d69;
+  --secondary-color: #4b86b4;
+  --background-color: #16192f;
+  --span-color: #fef08a;
+  --white: #fff;
+  --border-radius: 5px;
+  --spacing: 1rem;
+}
 /*UTILITY*/
 html{
   scroll-behavior: smooth; /* smooth scrolling */
   font-size: 16px; /* base font size */
   padding-top:30px ;
   font-family: 'Ubuntu', sans-serif;
-  background-color: #16192f; /* light background */
+  background-color: var(--background-color);
   color: #333; /* dark text */
   background-color: rgb(22, 25, 47);
 }
@@ -64,7 +74,7 @@ body {
   min-height: 90vh; /* full height */
   margin: 0; /* remove default margin */
   font-family: 'Urbanist', sans-serif; /* default font */
-  background-color: #16192f; /* dark background */
+  background-color: var(--background-color); /* dark background */
   color: #ffffff; /* white text */
   line-height: 1.6; /* improved readability */
   padding: 0; /* remove default padding */
@@ -83,14 +93,13 @@ main{
   flex-direction: column;
   justify-content: center;
   align-items: start;
-  padding: 25px; /* padding around the content */
-
+  padding: 25px; 
 
 }
 span{
   font-family: 'Urbanist', sans-serif;
   font-weight: 500;
-  color: #fef08a; /* orange-yellow */
+  color: var(--span-color); 
 }
 p{
   font-family: 'Urbanist', sans-serif;
@@ -132,10 +141,424 @@ section{
 }
 
 
+/* NAVIGATION STYLES*/
+
+nav{
+  position: fixed;
+  top: 5px;
+  left: 0;
+  width: 100%;
+  height: 60px;
+  background-color: transparent; /* dark background */
+  color: white; /* white text */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000; /* ensure it stays on top */
+  
+}
+nav ul {
+  list-style: none;
+  width: 450px;
+  background-color:rgba(0, 0, 0, 0.1); /* semi-transparent dark background */
+  height: 30px;
+  margin: 0;
+  padding: 7px 0 ;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  border-radius: 30px; /* rounded corners */
+  backdrop-filter: blur(10px); /* blur effect */
+  border: 1px solid rgba(255, 255, 255, 0.2); /* subtle border */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* subtle shadow */
+
+} 
+nav ul li a{
+  margin: 0 10px;
+  color: white; 
+  font-size: 14px;
+  text-decoration: none;
+}
+
+
+/* ABOUT SECTION STYLES*/
+
+.profile-section {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+
+.profile-pic {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+.profile-info {
+  display: flex;
+  flex-direction: column;
+  color: #ffffff;
+  font-size: 20px;
+}
+.profile-info h1 {
+  font-size: 40px;
+  margin: 0;
+  font-weight: 700;
+}
+
+.status-badge {
+  border: 1px solid #1FC9A0;
+  padding: 4px 12px;
+  border-radius: 9999px;
+  color: #ffffff;
+  font-size: 14px;
+  white-space: nowrap;
+}
+
+.social-links { 
+  display: flex;
+  gap: 1rem;
+  padding: 1rem;
+}
+
+
+
+.icon {
+  font-size: 18px;
+}
+
+/* EXPERIENCE SECTION STYLES*/
+
+.timeline {
+  position: relative;
+  padding-left: 30px; /* spacing from the line */
+  margin-bottom: 40px;
+}
+.timeline-item {
+  position: relative;
+  margin-bottom: 20px;
+  padding-left: 20px; /* spacing for the circle */
+}
+
+/* line */
+.timeline::before {
+  content: '';
+  position: absolute;
+  left: 8px; /* position the line */
+  height: 100%;
+  top:0 ;
+  bottom: 0;
+  width: 2px;
+  background-color: #FFB400; /* orange-yellow */
+}
+/* Circle */
+.timeline-item::before {
+  content: '';
+  position: absolute;
+  top: 10px;
+  left: -28px;
+  width: 14px;
+  height: 14px;
+  background-color: #FFB400;
+  border-radius: 50%;
+  box-shadow: 0 0 0 2px #FFB400;
+}
+
+
+
+.timeline-marker {
+  position: absolute;
+  left: -11px;
+  top: 5px;
+  width: 15px;
+  height: 15px;
+  background-color: #fdbb00; 
+  border-radius: 50%;
+  z-index: 1;
+}
+
+
+.timeline-item .content {
+  color: white;
+  background-color: var(--background-color); 
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3s ease;
+  display: flex;
+}
+.timeline-item .content:hover {
+  background-color: var(--background-color); /* slightly darker on hover */
+  cursor: pointer;
+  transform: scale(1.02); /* slight zoom effect */
+  transition: transform 0.2s ease;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  color: white; /* darker text on hover */
+
+}
+
+@media (max-width: 768px) {
+  .timeline-item .content h3 {
+    padding-right: 18px;
+  }
+
+  .project-image {
+    width: 100%;
+  }
+}
+
+
+/* PROJECTS SECTION STYLES*/
+
+.project-card {
+  max-width: 1100px;
+  margin: auto;
+  border-radius: 12px;
+  overflow: hidden;
+  padding: 20px;
+}
+
+.project-content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 24px;
+  flex-wrap: wrap;
+}
+.project-image-container{
+  flex: 0 0 auto;
+  width: 300px; 
+  max-width: 100%;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+
+.project-image {
+  max-width: 100%;
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+  overflow: hidden;
+  transform: scale(1.2);
+  transition: transform 0.3s ease;
+}
+.project-image:hover {
+  transform: scale(1); /* zoom effect on hover */
+  
+}
+
+.project-info {
+  flex: 1;
+  min-width: 260px;
+  cursor: pointer;
+  
+}
+
+.project-info:hover .project-title {
+  background-color: var(--background-color); /* slightly darker on hover */
+  cursor: pointer;
+  transform: scale(1.07); /* slight zoom effect */
+  transition: transform 0.2s ease;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  color: white; /* darker text on hover */
+
+}
+
+.project-title {
+  font-size: 1.5rem;
+  margin-bottom: 12px;
+  color: #ffffff;
+  font-weight: bold;
+}
+
+.tech-stack {
+  display: flex;
+  gap: 10px;
+  margin-bottom: 12px;
+  flex-wrap: wrap;
+}
+
+.badge {
+  padding: 4px 10px;
+  border-radius: 12px;
+  font-size: 0.85rem;
+  font-weight: 500;
+  color: white;
+  
+}
+
+.node{
+  background-color: #68a063; 
+}
+.mongodb {
+  background-color: #10b981;
+}
+
+.tailwind {
+  background-color: #38bdf8;
+}
+
+.react {
+  background-color: #3b82f6;
+}
+.n8n{
+  background-color: #ff4a11;
+}
+
+.project-description {
+  font-size: 1rem;
+  line-height: 1.5;
+  margin-bottom: 16px;
+  color: #cbd5e1;
+}
+
+.project-buttons {
+  display: flex;
+  gap: 12px;
+}
+
+
+@media (max-width: 768px) {
+  .project-content {
+    flex-direction: column;
+  }
+
+  .project-image {
+    width: 100%;
+  }
+}
+
+
+/* INTERESTS SECTION STYLES*/
+.interests-image {
+  flex: 1;
+  min-width: 220px;
+  display: flex;
+  justify-content: center;
+}
+
+.interests-image img {
+  max-width: 250px;
+  width: 100%;
+  height: auto;
+  border-radius: 12px;
+  border: 3px solid #1f2937;
+  transform: rotate(2deg);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+}
+
+
+
+.interests-content{
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  padding: 20px;
+}
+.interests-cards-container{
+  display: grid;
+  grid-template-columns: 200px 200px;
+  gap: 20px;
+}
+
+
+.interest-card{
+  
+  background-color: transparent; /* dark background */
+  border-radius: 12px;
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  transition: transform 0.3s ease;
+}
+.interest-card h3 {
+  font-size: 1.2rem;
+  color: #bdbdbd; /* orange-yellow */
+  margin-bottom: 10px;
+}
+.interest-card p {
+  font-size: 1rem;
+  color: #ffffff; /* white text */
+  line-height: 1.5;
+}
+.interest-card:hover {
+  transform: translateY(-5px); /* lift effect on hover */
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+}
+
+@media (max-width: 768px) {
+  .interests-cards-container{
+    display: flex;
+    flex-direction: column;
+  }
+  .interests-content {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+
+/* CONTACT SECTION STYLES*/
+.contact-form{
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  max-width: 600px;
+  margin: auto;
+  padding: 20px;
+  border-radius: 12px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  transition: background-color 0.3s ease;
+}
+.contact-form:hover {
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+}
+a{
+  text-decoration: none;
+  color: var(--span-color); 
+  font-weight: 500; /* medium weight */
+}
+a:hover {
+  color: #fbbf24; /* lighter yellow on hover */
+}
+.contact-form input, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  font-size: 16px;
+  background-color: #1f2937; /* dark background */
+  color: #ffffff; /* white text */
+  transition: border-color 0.3s ease;
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+  resize: vertical; /* allow vertical resizing for textarea */
+  font-family: 'Urbanist', sans-serif; /* consistent font */
+  font-weight: 400; /* regular weight */
+}
+.contact-form input:focus, textarea:focus {
+  border-color: #3b82f6; /* blue border on focus */
+  outline: none;
+}
+.contact-form label {
+  font-size: 16px;
+  color: #ffffff; 
+  margin-bottom: 8px;
+  font-weight: 500; /* medium weight */
+  font-family: 'Urbanist', sans-serif; /* consistent font */
+}
+
+.form-group-submit{
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+
 
 /* FOOTER STYLES*/
 footer {
-  background-color: #16192f; /* dark background */
+  background-color: var(--background-color); /* dark background */
   color: #ffffff;
   display: flex;
   justify-content: center;
