--- a/styles/main.css
+++ b/styles/main.css
@@ -254,10 +254,14 @@ nav ul li a{
   width: 24px;
   height: 24px;
   transition: transform 0.2s ease;
-  
-
 }
-
+.title-span{
+  width: 24px;
+}
+.title-svg{
+  width: 24px;
+  fill: #fff;
+}
 .tech-stack-container h2 {
   font-size: 1.4rem;
   color: #ffff; 
