--- a/styles/main.css
+++ b/styles/main.css
@@ -334,7 +334,9 @@ nav ul li a{
   border-radius: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   transition: background-color 0.3s ease;
-  display: flex;
+  display: grid;
+  grid-template-columns:1fr 2fr;
+
 }
 .timeline-item .content:hover {
   background-color: var(--background-color); /* slightly darker on hover */
@@ -349,6 +351,8 @@ nav ul li a{
 .timeline-item .content h3 {
   padding-right: 18px;
 }
+
+
 
 
 
