--- a/styles/main.css
+++ b/styles/main.css
@@ -167,8 +167,8 @@ nav{
 nav ul {
   list-style: none;
   width: 450px;
-  background-color:rgba(0, 0, 0, 0.1); /* semi-transparent dark background */
-  height: 30px;
+  background-color:rgba(0, 0, 0, 0.1); 
+  height: 50px;
   margin: 0;
   padding:0;
   display: flex;
